force-app/main/default/objects/KimbleOne__InsightPreference__c/KimbleOne__InsightPreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Insight Preference</label>
</CustomObject>