force-app/main/default/objects/KimbleOne__InsightPreference__c/fields/KimbleOne__EnableDeliveryGroupAverageMarginInsight__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnableDeliveryGroupAverageMarginInsight__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show the Average Delivery Engagement Margin on the Proposal Details Pages</description>
    <label>Enable Engagement Avg Margin Insight</label>
    <type>Checkbox</type>
</CustomField>