force-app/main/default/objects/KimbleOne__InsightPreference__c/fields/KimbleOne__EnableExpenseForecastingInsight__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnableExpenseForecastingInsight__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show the Average value of the Expense Items claimed by Expense Category on the Expense Forecasting Pages</description>
    <label>Enable Expense Forecasting Insight</label>
    <type>Checkbox</type>
</CustomField>