force-app/main/default/objects/KimbleOne__InsightPreference__c/fields/KimbleOne__EnableResourceTypeMarginInsight__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnableResourceTypeMarginInsight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the Average Margin of Assignments by Resource Type on the Proposal Details Pages</description>
    <label>Enable Resource Type Margin Insight</label>
    <type>Checkbox</type>
</CustomField>